--- a/pom.xml
+++ b/pom.xml
@@ -59,25 +59,24 @@
 		</dependency>
 
 					<!-- https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt-impl -->
+				<dependency>
+		    <groupId>io.jsonwebtoken</groupId>
+		    <artifactId>jjwt-api</artifactId>
+		    <version>0.11.5</version> <!-- or latest version -->
+		</dependency>
 		<dependency>
 		    <groupId>io.jsonwebtoken</groupId>
 		    <artifactId>jjwt-impl</artifactId>
-		    <version>0.12.6</version>
+		    <version>0.11.5</version> <!-- or latest version -->
 		    <scope>runtime</scope>
 		</dependency>
-		<!-- https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt-api -->
 		<dependency>
 		    <groupId>io.jsonwebtoken</groupId>
-		    <artifactId>jjwt-api</artifactId>
-		    <version>0.12.6</version>
-		</dependency>
-				<!-- https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt-jackson -->
-		<dependency>
-		    <groupId>io.jsonwebtoken</groupId>
-		    <artifactId>jjwt-jackson</artifactId>
-		    <version>0.12.6</version>
+		    <artifactId>jjwt-jackson</artifactId> <!-- or jjwt-gson for Gson -->
+		    <version>0.11.5</version> <!-- or latest version -->
 		    <scope>runtime</scope>
 		</dependency>
+
 
 		</dependencies>
 
